Added TeamLeads Resource and filter

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_ENV=local
 APP_KEY=base64:WsjkM8PiOmqtu60u7gYGmJwM8zqdyZfYE92t5BeDRrQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-# APP_URL=http://localhost
-APP_URL=http://agent.squadinternational.net/
+APP_URL=http://localhost
+# APP_URL=http://agent.squadinternational.net/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,17 +22,17 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_PORT=3306
-# DB_HOST=127.0.0.2
-# DB_DATABASE=squadintcrm
-# DB_USERNAME=root
-# DB_PASSWORD=
-# DB_COLLATION=utf8mb4_general_ci
+DB_HOST=127.0.0.2
+DB_DATABASE=squadintcrm
+DB_USERNAME=root
+DB_PASSWORD=
+DB_COLLATION=utf8mb4_general_ci
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=squasqnl_crm
-DB_USERNAME=squasqnl_user
-DB_PASSWORD=HaiderFelix
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=squasqnl_crm
+# DB_USERNAME=squasqnl_user
+# DB_PASSWORD=HaiderFelix
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
