--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_PORT=3306
 # DB_DATABASE=squadintcrm
 # DB_USERNAME=root
 # DB_PASSWORD=
-# DB_COLLATION=utf8mb4_general_ci
+DB_COLLATION=utf8mb4_general_ci
 
 DB_HOST=localhost
 DB_DATABASE=squasqnl_crm
